k8s-manifests/db1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db1
  name: db1
  namespace: project-plato
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db1
  template:
    metadata:
      labels:
        app: db1
    spec:
      containers:
      - name: nginx
        image: nginx:1.16.1-alpine
        ports:
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
