k8s-manifests/db2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db2
  name: db2
  namespace: project-plato
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db2
  template:
    metadata:
      labels:
        app: db2
    spec:
      containers:
      - name: nginx
        image: nginx:1.16.1-alpine
        ports:
        - containerPort: 5432
