k8s-manifests/db1-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db1
  name: db1-service
  namespace: project-plato
spec:
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  selector:
    app: db1
