k8s-manifests/db2-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db2
  name: db2-service
  namespace: project-plato
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: db2
